kubernetes/main/apps/monitoring/victorialogs/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victorialogs
  namespace: kube-monitoring
  annotations:
    external-dns.alpha.kubernetes.io/target: ip.nidr0x.win
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https-gateway
    - name: internal
      namespace: gateway
      sectionName: https-gateway
  hostnames:
    - "monitoring.nidr0x.win"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /victorialogs
      backendRefs:
        - name: victorialogs-server-gateway
          port: 9428
